load single packages; check on whehter packages are already loaded; load only needed meta data into i2b2. TODO add only needed crc data

--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -17,7 +17,7 @@ i2b2.version=1706
 
 ## I2B2 properties
 packages.dir=/vagrant/packages/
-packages.dir.noload=false
+packages.dir.noload=true
 # package v2 with wildfly webinf
 #packages.url=https://cloudstorage.uni-oldenburg.de/index.php/s/37qXFFdFReNlqlP/download 
 # package v2.1
