--- a/dwh/i2b2_install/build.xml
+++ b/dwh/i2b2_install/build.xml
@@ -39,43 +39,10 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
     
     <target name="copy_files" depends="init">
         <echo message="change propertie files and sql"/>
-
-        <!-- copy sql files-->
-        <copy file="${ant.installdata.dir}/${dbuser.dir}/scripts/create_hive_user.sql.orig" tofile="${ant.installdata.dir}/${dbuser.dir}/scripts/create_hive_user.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${dbuser.dir}/scripts/create_pm_user.sql.orig" tofile="${ant.installdata.dir}/${dbuser.dir}/scripts/create_pm_user.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${dbuser.dir}/scripts/create_im_user.sql.orig" tofile="${ant.installdata.dir}/${dbuser.dir}/scripts/create_im_user.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${dbuser.dir}/scripts/create_meta_user.sql.orig" tofile="${ant.installdata.dir}/${dbuser.dir}/scripts/create_meta_user.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${dbuser.dir}/scripts/create_work_user.sql.orig" tofile="${ant.installdata.dir}/${dbuser.dir}/scripts/create_work_user.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${dbuser.dir}/scripts/create_crc_user.sql.orig" tofile="${ant.installdata.dir}/${dbuser.dir}/scripts/create_crc_user.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${hive.dir}/scripts/update_hive_tables.sql.orig" tofile="${ant.installdata.dir}/${hive.dir}/scripts/update_hive_tables.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${pm.dir}/scripts/register_cells.sql.orig" tofile="${ant.installdata.dir}/${pm.dir}/scripts/register_cells.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${pm.dir}/scripts/update_i2b2pm_tables.sql.orig" tofile="${ant.installdata.dir}/${pm.dir}/scripts/update_i2b2pm_tables.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${work.dir}/scripts/workplace_access_insert_data.sql.orig" tofile="${ant.installdata.dir}/${work.dir}/scripts/workplace_access_insert_data.sql" overwrite="true"/>
-
-        <!-- copy properties files-->
-        <copy file="${ant.installdata.dir}/${dbuser.dir}/db.properties.orig" tofile="${ant.installdata.dir}/${dbuser.dir}/db.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${hive.dir}/db.properties.orig" tofile="${ant.installdata.dir}/${hive.dir}/db.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${pm.dir}/db.properties.orig" tofile="${ant.installdata.dir}/${pm.dir}/db.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${im.dir}/db.properties.orig" tofile="${ant.installdata.dir}/${im.dir}/db.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${work.dir}/db.properties.orig" tofile="${ant.installdata.dir}/${work.dir}/db.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${meta.dir}/db.properties.orig" tofile="${ant.installdata.dir}/${meta.dir}/db.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/${crc.dir}/db.properties.orig" tofile="${ant.installdata.dir}/${crc.dir}/db.properties" overwrite="true"/>
-
-        <!-- copy ds.xml files-->
-        <copy file="${ant.installdata.dir}/jboss_xml_ds/crc-ds.xml.orig" tofile="${ant.installdata.dir}/jboss_xml_ds/crc-ds.xml" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_xml_ds/ont-ds.xml.orig" tofile="${ant.installdata.dir}/jboss_xml_ds/ont-ds.xml" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_xml_ds/pm-ds.xml.orig" tofile="${ant.installdata.dir}/jboss_xml_ds/pm-ds.xml" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_xml_ds/work-ds.xml.orig" tofile="${ant.installdata.dir}/jboss_xml_ds/work-ds.xml" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_xml_ds/im-ds.xml.orig" tofile="${ant.installdata.dir}/jboss_xml_ds/im-ds.xml" overwrite="true"/>
-
-        <!-- copy jboss deployment app files-->
-        <copy file="${ant.installdata.dir}/jboss_config/crcapp/crc.properties.orig" tofile="${ant.installdata.dir}/jboss_config/crcapp/crc.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_config/crcapp/CRCLoaderApplicationContext.xml.orig" tofile="${ant.installdata.dir}/jboss_config/crcapp/CRCLoaderApplicationContext.xml" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_config/crcapp/edu.harvard.i2b2.crc.loader.properties.orig" tofile="${ant.installdata.dir}/jboss_config/crcapp/edu.harvard.i2b2.crc.loader.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_config/ontologyapp/ontology.properties.orig" tofile="${ant.installdata.dir}/jboss_config/ontologyapp/ontology.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_config/ontologyapp/OntologyApplicationContext.xml.orig" tofile="${ant.installdata.dir}/jboss_config/ontologyapp/OntologyApplicationContext.xml" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_config/workplaceapp/workplace.properties.orig" tofile="${ant.installdata.dir}/jboss_config/workplaceapp/workplace.properties" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/jboss_config/imapp/im.properties.orig" tofile="${ant.installdata.dir}/jboss_config/imapp/im.properties" overwrite="true"/>
+        <copy todir="${ant.installdata.dir}" overwrite="true" verbose="true">
+            <fileset dir="${ant.installdata.dir}/"/>
+            <globmapper from="*.orig" to="*"/>
+        </copy>
     </target> 
     <target name="change_properties" depends="copy_files">
         <replace dir="${ant.installdata.dir}/" value="" failOnNoReplacements="true">
@@ -123,7 +90,7 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
         <copy file="${packages.dir}/postgresql-9.2-1002.jdbc4.jar" todir="${jboss.home}/standalone/deployments" />
     </target>
     <target name="unzip_i2b2" depends="init">
-        <!--
+        <!--       --> 
         <delete dir="${i2b2.src.dir}" quiet="true"/>
         <mkdir dir="${i2b2.src.dir}" />
         <unzip src="${packages.dir}/i2b2core-src-${i2b2.version}.zip" dest="${i2b2.src.dir}">
@@ -145,7 +112,7 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
         <copy file="${ant.installdata.dir}/${db.driver.jar}" todir="${ant.i2b2.data.dir}/" overwrite="true"/>
 
         <unzip src="${packages.dir}/i2b2webclient-${i2b2.version}.zip" dest="${i2b2.src.dir}"/>
-        --> 
+ 
         <copy file="${i2b2.src.dir}/webclient/i2b2_config_data.js" tofile="${i2b2.src.dir}/webclient/i2b2_config_data.js.orig"/>
         <replace file="${i2b2.src.dir}/webclient/i2b2_config_data.js">
             <replacefilter token="allowAnalysis: false" value="allowAnalysis: true"/>
@@ -321,7 +288,7 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
         <echo message="meta: create"/>
         <copy file="${ant.installdata.dir}/${meta.dir}/db.properties" todir="${ant.i2b2.data.dir}/Metadata" overwrite="true"/>
         <ant antfile="${ant.i2b2.data.dir}/Metadata/data_build.xml" target="create_metadata_tables_release_1-7" output="${log.dir}/meta_create.log" inheritAll="false" useNativeBasedir="true"/>
-        <ant antfile="${ant.installdata.dir}/${meta.dir}/change_build.xml" target="db_metadata_load_data" output="${log.dir}/meta_load_aktin.log" inheritAll="false" useNativeBasedir="true"/>
+        <ant antfile="${ant.installdata.dir}/${meta.dir}/change_build.xml" target="db_metadata_load_data" output="${log.dir}/meta_load_aktin.log" inheritAll="false" useNativeBasedir="true"/><!-- update demographics to aktin! -->
     </target>    
     <!-- =================================================================== -->
     <target name="metadata_delete" depends="init" description="drop META Database">
@@ -347,6 +314,7 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
     <!-- =================================================================== -->
     <target name="unzip_i2b2_demo">
     <!--
+     -->
         <unzip src="${packages.dir}/i2b2createdb-${i2b2.version}.zip" dest="${i2b2.src.dir}">
             <patternset>
                 <include name="**/NewInstall/Metadata/demo/scripts/*.sql"/>
@@ -355,7 +323,6 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
                 <include name="**/NewInstall/Crcdata/scripts/expression_obs_demo_insert_data.sql"/>                   
             </patternset>
         </unzip> 
-     -->
     </target>
     <target name="insert_demodata" depends="unzip_i2b2_demo" description="insert Demo Data">      
         <echo message="insert demo data"/>
