--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -46,6 +46,7 @@ db.server=localhost:5432/
 db.name=i2b2
 db.project=demo
 db.project.name=Demo
+db.project.uname=i2b2_DEMO
 db.driver=org.postgresql.Driver
 db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.url=jdbc:postgresql://localhost:5432/
@@ -74,6 +75,7 @@ db.DBTYPE=@DBTYPE@
 db.DBTYPENAME=@DBTYPENAME@
 db.DBPROJECT=@I2B2PROJECT@
 db.DBPROJECTNAME=@I2B2PROJECTNAME@
+db.DBPROJECTUNAME=@I2B2PROJECTUNAME@
 db.DBNAME=@DBNAME@
 db.SERVERURL=@SERVERURL@
 db.DBDRIVER=@DBDRIVER@
