--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -9,6 +9,7 @@ axis2.war.name=i2b2.war
 axis2.patch.zip.name=jboss-deployment-i2b2war-WEB-INF.zip
 #axis2.patch.zip.name=wildfly-deployment-i2b2war-WEB-INF.zip
 jboss.zip.name=wildfly-9.0.2.Final.zip
+dwh.j2ee.ear=dwh-j2ee-0.5-SNAPSHOT.ear
 bin.includes = lib/jdom/jdom.jar
 bin.includes = lib/jdom/jdom-contrib.jar
 jboss.dir.exist=false
