--- a/dwh/i2b2_install/packages.properties
+++ b/dwh/i2b2_install/packages.properties
@@ -32,3 +32,5 @@ jboss.zip.url=https://cloudstorage.uni-oldenburg.de/index.php/s/l8o6SM3Hueaxpen/
 db.driver.jar=postgresql-9.2-1002.jdbc4.jar
 db.driver.url=https://cloudstorage.uni-oldenburg.de/index.php/s/PkC9jJiUeZ8ILBQ/download
 
+dwh.j2ee.ear=dwh-j2ee-0.5-SNAPSHOT.ear
+dwh.j2ee.ear.url=https://cloudstorage.uni-oldenburg.de/index.php/s/nh1D9O621kXN0Kq/download
