--- a/dwh/i2b2_install/build.xml
+++ b/dwh/i2b2_install/build.xml
@@ -6,6 +6,7 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
 
     <property file="build.properties"/>
     <property environment="env" />
+    <property name="ant.i2b2.data.dir" value="${i2b2.src.dir}/edu.harvard.i2b2.data/Release_1-7/NewInstall/" />
 
     <!-- =================================================================== -->
     <!--                                INIT                                 -->
