--- a/dwh/Vagrantfile
+++ b/dwh/Vagrantfile
@@ -25,7 +25,7 @@ Vagrant.configure(2) do |config|
   config.vm.network "forwarded_port", guest: 80, host: 80
 
 # i2b2 web services
-  config.vm.network "forwarded_port", guest: 9090, host: 9090
+#  config.vm.network "forwarded_port", guest: 9090, host: 9090
 #  config.vm.network "forwarded_port", guest: 8080, host: 8080
 # wildfly management console
 #  config.vm.network "forwarded_port", guest_ip: "127.0.0.1", guest: 9990, host: 9990
