--- a/dwh/i2b2_install/build.xml
+++ b/dwh/i2b2_install/build.xml
@@ -172,6 +172,12 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
         <replace file="${jboss.home}/bin/appclient.conf">
             <!--Memory settings:-->
             <replacefilter token="-Xms64m -Xmx512m" value="-Xms512m -Xmx1024m"/>
+        </replace>           
+
+        <copy file="${jboss.home}/bin/standalone.conf" tofile="${jboss.home}/bin/standalone.conf.orig"/>
+        <replace file="${jboss.home}/bin/standalone.conf">
+            <!--Memory settings:-->
+            <replacefilter token="-Xms64m -Xmx512m" value="-Xms512m -Xmx1024m"/>
         </replace>   
 
         <copy file="${jboss.home}/standalone/configuration/standalone.xml" tofile="${jboss.home}/standalone/configuration/standalone.xml.orig"/>    
