--- a/dwh/i2b2_install/build.properties
+++ b/dwh/i2b2_install/build.properties
@@ -80,8 +80,8 @@ db.work.user=i2b2workdata
 db.work.pwd=i2b2workdata
 db.meta.user=i2b2metadata
 db.meta.pwd=i2b2metadata
-db.crc.user=i2b2demodata
-db.crc.pwd=i2b2demodata
+db.crc.user=i2b2crcdata
+db.crc.pwd=i2b2crcdata
 
 # replace properties
 db.IPADDR=@IPADDR@
