--- a/dwh/i2b2_install/build.xml
+++ b/dwh/i2b2_install/build.xml
@@ -361,5 +361,5 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
         <echo message="delete db all"/>
     </target>
 
-    <target name="all" depends="get_packages, mkdir_log, deploy_jboss, db_all" />
+    <target name="all" depends="get_packages, mkdir_log, deploy_jboss, db_all, deploy_dwh_j2ee_ear" />
 </project>
