--- a/dwh/i2b2_install/build.xml
+++ b/dwh/i2b2_install/build.xml
@@ -334,9 +334,9 @@ $Id: data_build.xml,v 1.2 2010/04/05 13:52:11 lcp5 Exp $
     <!-- =================================================================== -->
     <target name="aktin_insert" depends="init" description="insert aktin data">
         <echo message="aktin: insert"/>
-        <copy file="${ant.installdata.dir}/db_aktin/i2b2metadata.table_access.insert.sql" tofile="${ant.installdata.dir}/${meta.dir}/scripts/i2b2metadata.table_access.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/db_aktin/i2b2metadata.i2b2.copy.sql" tofile="${ant.installdata.dir}/${meta.dir}/scripts/i2b2metadata.i2b2.sql" overwrite="true"/>
-        <copy file="${ant.installdata.dir}/db_aktin/i2b2crcdata.concept_dimension.copy.sql" tofile="${ant.installdata.dir}/${crc.dir}/scripts/i2b2crcdata.concept_dimension.sql" overwrite="true"/>
+        <copy file="${ant.installdata.dir}/db_aktin/i2b2metadata.table_access.sql" tofile="${ant.installdata.dir}/${meta.dir}/scripts/i2b2metadata.table_access.sql" overwrite="true"/>
+        <copy file="${ant.installdata.dir}/db_aktin/i2b2metadata.i2b2.sql" tofile="${ant.installdata.dir}/${meta.dir}/scripts/i2b2metadata.i2b2.sql" overwrite="true"/>
+        <copy file="${ant.installdata.dir}/db_aktin/i2b2crcdata.concept_dimension.sql" tofile="${ant.installdata.dir}/${crc.dir}/scripts/i2b2crcdata.concept_dimension.sql" overwrite="true"/>
         <ant antfile="${ant.installdata.dir}/${meta.dir}/change_build.xml" target="load_aktin_meta_insert" output="${log.dir}/aktin_meta_load.log" inheritAll="false" useNativeBasedir="true"/>
         <ant antfile="${ant.installdata.dir}/${crc.dir}/change_build.xml" target="load_aktin_crc_insert" output="${log.dir}/aktin_crc_load.log" inheritAll="false" useNativeBasedir="true"/>
     </target>
